# BigData

./: README.md
datasets/: dataset.csv  dataset.xlsx  dataset_setting.txt
defense/: Presentation.pptx
doc/landysalasy-bigdata/: CMakeLists.txt
doc/landysalasy-bigdata/includes/: HTM.h  add_trixel_children.h  build_HTM.h  build_octahedron.h  catalogue.h  load_data.h  log.h  math_tool.h  object.h  pop_front_list.h  pop_target_list.h  portability.h  put_back_list.h  put_front_list.h  running_tree.h
doc/landysalasy-bigdata/sources/: add_trixel_children.c  build_HTM.c  build_catalogue_by_file.c  build_catalogue_by_random.c  build_octahedron.c  build_pool_node.c  build_pool_object.c  free_catalogue.c  free_htm.c  get_trixel_pool.c  is_in_donut.c  is_in_triangle.c  landySalazyEstimator_get_data.c  landySalazyEstimator_valid_data.c  load_data.c  main.c  pop_front_list.c  pop_target_list.c  put_back_list.c  put_front_list.c  put_object_into_children.c  put_object_into_htm.c  put_object_into_octahedron.c  put_object_into_trixel.c  running_tree.c
src/: settings.txt
